--- a/app/src/main/res/layout/activity_recognition.xml
+++ b/app/src/main/res/layout/activity_recognition.xml
@@ -7,8 +7,56 @@
     tools:context=".Recognition">
 
     <org.opencv.android.JavaCameraView
+        android:id="@+id/frame_Surface"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/frame_Surface"/>
+        tools:layout_editor_absoluteX="124dp"
+        tools:layout_editor_absoluteY="-341dp" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/current_image"
+        android:scaleType="fitXY" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/textView"
+        android:background="@color/white"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/white"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0dp">
+
+        <ImageView
+            android:layout_width="42dp"
+            android:layout_height="36dp"
+            android:id="@+id/gallery_button_image"
+            android:src="@drawable/ic_baseline_photo_library_24"
+            android:translationX="-100dp" />
+
+        <ImageView
+            android:id="@+id/take_picture"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_baseline_photo_camera_24" />
+
+        <ImageView
+            android:layout_width="42dp"
+            android:layout_height="36dp"
+            android:id="@+id/translate_button"
+            android:src="@drawable/ic_baseline_translate_24"
+            android:translationX="100dp" />
+
+
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
