--- a/app/src/main/res/layout/activity_recognition.xml
+++ b/app/src/main/res/layout/activity_recognition.xml
@@ -28,7 +28,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@color/white"
+        android:background="#55555555"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
