--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,23 +23,23 @@
         android:id="@+id/camera_button"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="363dp"
+        android:layout_marginBottom="500dp"
         android:text="Camera"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="80dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="80dp" />
 
     <Button
         android:id="@+id/storage_ImageP_button"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginTop="254dp"
+        android:layout_marginTop="96dp"
         android:text="Storage Image Recognition"
         android:textAllCaps="false"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="80dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="80dp" />
 
     <Spinner
         android:id="@+id/spinner"
