Text page layout

--- a/app/src/main/res/layout/fragment_speech.xml
+++ b/app/src/main/res/layout/fragment_speech.xml
@@ -105,7 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Translate Your Speech"
+        android:text="Translate Speech"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="28sp"
