--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -54,12 +54,18 @@
             android:layout_height="wrap_content"
             android:text="Translate" />
 
-        <Spinner
+<!--        <Spinner-->
+<!--            android:id="@+id/tSpinner"-->
+<!--            android:layout_width="409dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:minHeight="48dp"-->
+<!--            tools:ignore="SpeakableTextPresentCheck" />-->
+        <AutoCompleteTextView
             android:id="@+id/tSpinner"
-            android:layout_width="409dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="48dp"
-            tools:ignore="SpeakableTextPresentCheck" />
+            android:layout_weight="0"
+            android:minHeight="48dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tTextField2"
