--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white_500">#FFFFFFFF</color>
+    <color name="transparent">#00000000</color>
     <color name="white_300">#60FFFFFF</color>
 </resources>
