Changed logout button color

--- a/app/src/main/res/layout/activity_translate.xml
+++ b/app/src/main/res/layout/activity_translate.xml
@@ -10,11 +10,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginTop="10dp"
         android:src="@drawable/ic_baseline_exit_to_app_24"
-        app:fabSize="mini"/>
+        app:tint="@color/white_500"
+        app:backgroundTint="@color/purple_500"
+        app:fabSize="mini" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
